fixed modal size and grid aligns

--- a/styles/index.css
+++ b/styles/index.css
@@ -12,6 +12,10 @@
     overflow-y: hidden;
 }
 
+#carousel *{
+    white-space: normal;
+}
+
 /* width */
 ::-webkit-scrollbar {
     width: 10px;
@@ -57,8 +61,6 @@
 .carousel-details {
     display: block;
     height: 20% !important;
-    white-space: normal;
-    overflow-wrap:break-word;
 }
 
 .carousel-header {
